fix: products on safari

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1361,11 +1361,11 @@ a.product__text {
   max-width: calc(100% - calc(var(--media-border-width) * 2));
 }
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
   .product-media-container {
     height: auto;
   }
-}
+} */
 
 .product-media-container.constrain-height {
   /* arbitrary offset value based on average theme spacing and header height */
